[project]
name = "comfyui_checkpoint_preset_manager"
description = "A custom node for ComfyUI designed to manage and automate optimal settings for different Checkpoints. It allows you to save and recall specific parameters—including steps, CFG, samplers, schedulers, and resolutions—linked directly to the model name."
version = "1.0.1"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/TakkunRed/comfyui_checkpoint_preset_manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "takkun"
DisplayName = "comfyui_checkpoint_preset_manager"
Icon = ""